# paddleboard

./: .gitattributes  .gitignore  .rules  ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  FORK_HYGIENE.md  GLOWUP.md  README.md  RECAPS.md  SECURITY.md  UNRELEASED.md  WELCOME.md  fix_cli_toast.pl  typos.toml
.claude/: settings.json
.claude/commands/: build.md  clippy.md
.claude/hooks/: recap-enforcer.sh
.github/workflows/: merge_upstream_zed.yml  release.yml  upstream-drift.yml
assets/ai_dock/: catalog.json
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  initial.json  vim.json
assets/settings/: default.json  initial_user_settings.json
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  db.rs  native_agent_server.rs  templates.rs  thread.rs  thread_store.rs  tools.rs
crates/agent/src/edit_agent/: edit_parser.rs  evals.rs
crates/agent/src/edit_agent/evals/fixtures/disable_cursor_blinking/: before.rs
crates/agent/src/templates/: system_prompt.hbs
crates/agent/src/tests/: mod.rs
crates/agent/src/tools/: adopt_persona_tool.rs  edit_file_tool.rs  grep_tool.rs  install_mcp_server_tool.rs  list_directory_tool.rs  read_file_tool.rs  sandbox_service_tool.rs  sandbox_tool.rs  semantic_search_tool.rs  spawn_agent_tool.rs  spawn_scion_agent_tool.rs  web_search_tool.rs
crates/agent/src/tools/evals/: edit_file.rs  streaming_edit_file.rs  terminal_tool.rs  write_file.rs
crates/agent/src/tools/evals/fixtures/disable_cursor_blinking/: before.rs
crates/agent_servers/: Cargo.toml
crates/agent_ui/: Cargo.toml
crates/ai_onboarding/: Cargo.toml
crates/auto_update_ui/: Cargo.toml
crates/benchmarks/: Cargo.toml
crates/browser/: Cargo.toml
crates/browser/src/: browser.rs  forwarded_ports.rs  lib.rs
crates/cli/: build.rs
crates/client/: Cargo.toml
crates/codestral/: Cargo.toml
crates/collab/: .env.toml  Cargo.toml
crates/collab_ui/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/context_server/: Cargo.toml
crates/crashes/: Cargo.toml
crates/db/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/edit_prediction/: Cargo.toml
crates/edit_prediction_cli/: build.rs
crates/edit_prediction_ui/: Cargo.toml
crates/editor/: Cargo.toml
crates/etw_tracing/: etw_tracing.rs
crates/eval_cli/: build.rs
crates/extensions_ui/: Cargo.toml
crates/feedback/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/git_graph/: Cargo.toml
crates/git_hosting_providers/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/gpui_macos/: Cargo.toml
crates/llm_picker/: Cargo.toml
crates/llm_picker/src/: llm_picker.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: status_toast.rs
crates/paddleboard_adk/: Cargo.toml
crates/paddleboard_adk/src/: paddleboard_adk.rs  scaffold_modal.rs
crates/paddleboard_agent_frameworks/: Cargo.toml
crates/paddleboard_agent_frameworks/src/: a2a.rs  adk.rs  autogen.rs  crewai.rs  langgraph.rs  paddleboard_agent_frameworks.rs  scaffold_modal.rs
crates/paddleboard_ai_dock/: Cargo.toml
crates/paddleboard_ai_dock/src/: ai_dock.rs  catalog.rs  paddleboard_ai_dock.rs
crates/paddleboard_ai_dock/src/ai_dock/: add_agent_modal.rs  add_skill_modal.rs  agents_tab.rs  build_mcp_modal.rs  mcp_tab.rs  personas_tab.rs  skills_tab.rs  usage_tab.rs
crates/paddleboard_container_engine/: Cargo.toml
crates/paddleboard_container_engine/src/: image_store.rs  paddleboard_container_engine.rs
crates/paddleboard_git_login/: Cargo.toml
crates/paddleboard_git_login/src/: device_flow.rs  paddleboard_git_login.rs
crates/paddleboard_krun_helper/: Cargo.toml
crates/paddleboard_krun_helper/resources/: paddleboard-krun-helper.entitlements
crates/paddleboard_krun_helper/src/: main.rs
crates/paddleboard_languages_ui/: Cargo.toml
crates/paddleboard_languages_ui/src/: paddleboard_languages_ui.rs
crates/paddleboard_llama_manager/: Cargo.toml
crates/paddleboard_llama_manager/src/: download.rs  paddleboard_llama_manager.rs  server.rs  ui.rs
crates/paddleboard_manifest/: Cargo.toml
crates/paddleboard_manifest/src/: paddleboard_manifest.rs
crates/paddleboard_otel/: Cargo.toml
crates/paddleboard_otel/src/: paddleboard_otel.rs
crates/paddleboard_personas/: Cargo.toml
crates/paddleboard_personas/src/: paddleboard_personas.rs
crates/paddleboard_rag/: Cargo.toml
crates/paddleboard_rag/src/: backend.rs  chunk.rs  embedding.rs  paddleboard_rag.rs  pgvector_store.rs  store.rs
crates/paddleboard_sandbox_prereqs/: Cargo.toml
crates/paddleboard_sandbox_prereqs/src/: paddleboard_sandbox_prereqs.rs
crates/paddleboard_sandbox_prereqs_state/: Cargo.toml
crates/paddleboard_sandbox_prereqs_state/src/: paddleboard_sandbox_prereqs_state.rs
crates/paddleboard_sandbox_prereqs_ui/: Cargo.toml
crates/paddleboard_sandbox_prereqs_ui/src/: paddleboard_sandbox_prereqs_ui.rs
crates/paddleboard_sandbox_settings/: Cargo.toml
crates/paddleboard_sandbox_settings/src/: paddleboard_sandbox_settings.rs
crates/paddleboard_scion/: Cargo.toml  SCION_COMPAT.md
crates/paddleboard_scion/src/: compat.rs  paddleboard_scion.rs  types.rs
crates/paddleboard_scion_ui/: Cargo.toml
crates/paddleboard_scion_ui/src/: paddleboard_scion_ui.rs  start_agent_modal.rs
crates/paddleboard_set_sail/: Cargo.toml
crates/paddleboard_set_sail/src/: paddleboard_set_sail.rs
crates/paddleboard_usage/: Cargo.toml
crates/paddleboard_usage/src/: paddleboard_usage.rs
crates/paddleboard_vertex/: Cargo.toml
crates/paddleboard_vertex/src/: paddleboard_vertex.rs
crates/tree-sitter-dockerfile/: Cargo.toml  build.rs
crates/tree-sitter-dockerfile/bindings/rust/: tree_sitter_dockerfile.rs
samples/: README.md
script/: bundle-linux  bundle-mac  check-llama-advisories  check-llama-pins  check-upstream-drift  check-zed-isms  debug-cli  determine-release-channel  determine-release-channel.ps1  fetch-llama-server  install-linux  install.sh  setup-builtin-sandbox  uninstall.sh  upstream-drift-baseline.json  verify-macos-document-icon
(+445 files in other folders)
