[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/agent.rs"

[features]
test-support = ["db/test-support"]
unit-eval = []
e2e = []

[lints]
workspace = true

[dependencies]
acp_thread.workspace = true
action_log.workspace = true
async-channel.workspace = true
agent-client-protocol.workspace = true
agent_servers.workspace = true
agent_settings.workspace = true
agent_skills.workspace = true
anyhow.workspace = true
# PaddleBoard: sandbox_service_tool uses the browser crate's forwarded ports
browser.workspace = true
chrono.workspace = true
client.workspace = true
cloud_api_types.workspace = true
cloud_llm_client.workspace = true
collections.workspace = true
context_server.workspace = true
db.workspace = true
feature_flags.workspace = true
fs.workspace = true
futures.workspace = true
git.workspace = true
gpui.workspace = true
# PaddleBoard: spawn_scion_agent_tool uses gpui_tokio outside tests
gpui_tokio.workspace = true
handlebars = { workspace = true, features = ["rust-embed"] }
heck.workspace = true
html_to_markdown.workspace = true
http_client.workspace = true
http_proxy.workspace = true
indoc.workspace = true
itertools.workspace = true
language.workspace = true
language_model.workspace = true
language_models.workspace = true
log.workspace = true
parking_lot.workspace = true
paths.workspace = true
project.workspace = true
prompt_store.workspace = true
quick-xml.workspace = true
regex.workspace = true
rust-embed.workspace = true
sandbox.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
shell_command_parser.workspace = true
smallvec.workspace = true
sqlez.workspace = true
streaming_diff.workspace = true
strsim.workspace = true
task.workspace = true
telemetry.workspace = true
tempfile.workspace = true
text.workspace = true
thiserror.workspace = true
ui.workspace = true
url.workspace = true
util.workspace = true
uuid.workspace = true
watch.workspace = true
web_search.workspace = true
paddleboard_env_vars.workspace = true
paddleboard_container_engine.workspace = true
paddleboard_sandbox_prereqs_state.workspace = true
paddleboard_personas.workspace = true
paddleboard_personas_settings.workspace = true
paddleboard_scion.workspace = true
paddleboard_scion_settings.workspace = true
paddleboard_sandbox_settings.workspace = true
paddleboard_usage.workspace = true
zstd.workspace = true

# Used only on Windows to resolve the running release channel/version so the WSL
# sandbox helper can fetch a matching Linux `zed`.
[target.'cfg(target_os = "windows")'.dependencies]
release_channel.workspace = true

[dev-dependencies]
assets.workspace = true
async-io.workspace = true
agent_servers = { workspace = true, "features" = ["test-support"] }
client = { workspace = true, "features" = ["test-support"] }
clock = { workspace = true, "features" = ["test-support"] }
context_server = { workspace = true, "features" = ["test-support"] }
ctor.workspace = true
db = { workspace = true, "features" = ["test-support"] }
editor = { workspace = true, "features" = ["test-support"] }
env_logger.workspace = true
eval_utils.workspace = true
fs = { workspace = true, "features" = ["test-support"] }
git = { workspace = true, "features" = ["test-support"] }
gpui = { workspace = true, "features" = ["test-support"] }
language = { workspace = true, "features" = ["test-support"] }
language_model = { workspace = true, "features" = ["test-support"] }
lsp = { workspace = true, "features" = ["test-support"] }
pretty_assertions.workspace = true
project = { workspace = true, "features" = ["test-support"] }
proptest.workspace = true
rand.workspace = true
reqwest_client.workspace = true
settings = { workspace = true, "features" = ["test-support"] }

theme = { workspace = true, "features" = ["test-support"] }
theme_settings.workspace = true

unindent = { workspace = true }

zlog.workspace = true
