[package]
name = "llm_picker"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/llm_picker.rs"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
language_model.workspace = true
theme.workspace = true
ui.workspace = true
workspace.workspace = true
