[package]
name = "paddleboard_adk"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_adk.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
menu.workspace = true
paddleboard_actions.workspace = true
task.workspace = true
ui.workspace = true
ui_input.workspace = true
workspace.workspace = true
