[package]
name = "paddleboard_agent_frameworks"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_agent_frameworks.rs"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
browser.workspace = true
editor.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
menu.workspace = true
multi_buffer.workspace = true
paddleboard_actions.workspace = true
project.workspace = true
smol.workspace = true
task.workspace = true
ui.workspace = true
ui_input.workspace = true
which.workspace = true
workspace.workspace = true
