[package]
name = "paddleboard_ai_dock"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_ai_dock.rs"

[dependencies]
agent_settings.workspace = true
agent_ui.workspace = true
anyhow.workspace = true
client.workspace = true
collections.workspace = true
fs.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
menu.workspace = true
paddleboard_actions.workspace = true
paddleboard_personas.workspace = true
paddleboard_usage.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
task.workspace = true
ui.workspace = true
ui_input.workspace = true
util.workspace = true
which.workspace = true
workspace.workspace = true

[dev-dependencies]
# Keeps feature unification consistent: this crate pulls in remote_connection
# (via agent_ui) without test-support, so testing it alongside a crate whose
# dev-deps enable remote/test-support (e.g. `cargo test -p agent -p
# paddleboard_ai_dock`) would otherwise add the Mock variant to
# RemoteConnectionOptions while remote_connection's cfg-gated Mock match arms
# stay compiled out (E0004).
remote_connection = { workspace = true, features = ["test-support"] }
