[package]
name = "paddleboard_container_engine"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_container_engine.rs"

[dependencies]
anyhow.workspace = true
flate2.workspace = true
futures.workspace = true
log.workspace = true
oci-client.workspace = true
oci-spec.workspace = true
paddleboard_sandbox_prereqs.workspace = true
paths.workspace = true
sha2.workspace = true
tar.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "rt"] }
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
