[package]
name = "paddleboard_languages_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_languages_ui.rs"

[dependencies]
gpui.workspace = true
language.workspace = true
menu.workspace = true
paddleboard_actions.workspace = true
project.workspace = true
settings.workspace = true
paddleboard_ui.workspace = true
ui.workspace = true
workspace.workspace = true
