[package]
name = "paddleboard_llama_manager"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_llama_manager.rs"

[dependencies]
anyhow.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
http_client = { workspace = true, features = ["github-download"] }
log.workspace = true
paths.workspace = true
settings.workspace = true
sha2.workspace = true
smol.workspace = true
ui.workspace = true
util.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
libc.workspace = true
tempfile.workspace = true
url.workspace = true
