[package]
name = "paddleboard_manifest"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_manifest.rs"
doctest = false

[dependencies]
anyhow.workspace = true
git.workspace = true
git_ui.workspace = true
gpui.workspace = true
project.workspace = true
theme.workspace = true
paddleboard_ui.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
