[package]
name = "paddleboard_personas"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_personas.rs"

[dependencies]
anyhow.workspace = true
log.workspace = true
paths.workspace = true

[dev-dependencies]
tempfile.workspace = true
