[package]
name = "paddleboard_rag"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_rag.rs"

[features]
# Bring-your-own vector store (pgvector over a user-provided Postgres). Off by
# default so the lean footprint carries no Postgres client; the `paddleboard`
# binary turns it on for official builds.
pgvector = ["dep:postgres", "dep:pgvector", "dep:postgres-native-tls", "dep:native-tls"]

[dependencies]
anyhow.workspace = true
collections.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
log.workspace = true
paddleboard_llama_manager.workspace = true
paths.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlez.workspace = true
worktree.workspace = true

# Feature-gated (`pgvector`) bring-your-own vector store.
postgres = { workspace = true, optional = true }
pgvector = { workspace = true, optional = true }
postgres-native-tls = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
