[package]
name = "paddleboard_sandbox_prereqs_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_sandbox_prereqs_ui.rs"

[dependencies]
fs.workspace = true
gpui.workspace = true
log.workspace = true
menu.workspace = true
paddleboard_sandbox_prereqs.workspace = true
paddleboard_sandbox_prereqs_state.workspace = true
paddleboard_sandbox_settings.workspace = true
settings.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
which.workspace = true
