[package]
name = "paddleboard_sandbox_settings"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_sandbox_settings.rs"

[dependencies]
gpui.workspace = true
paddleboard_sandbox_prereqs.workspace = true
serde.workspace = true
settings.workspace = true
