[package]
name = "paddleboard_set_sail"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_set_sail.rs"

[dependencies]
agent_ui.workspace = true
anyhow.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
log.workspace = true
menu.workspace = true
paddleboard_actions.workspace = true
paddleboard_ui.workspace = true
ui.workspace = true
ui_input.workspace = true
workspace.workspace = true
