[package]
name = "paddleboard_usage"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_usage.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
gpui.workspace = true
log.workspace = true
paths.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true

[dev-dependencies]
tempfile.workspace = true
