[package]
name = "paddleboard_vertex"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/paddleboard_vertex.rs"

[dependencies]
anyhow.workspace = true
futures.workspace = true
google_ai.workspace = true
http_client.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
